Revision history for MIDI-Util

{{$NEXT}}
    - Improve documentation.

0.0700 2020-11-30 08:08:24
    - Add the add_octave() function.
    - Improve documentation.

0.0602 2020-11-26 11:33:55
    - Don't import anything from MIDI::Simple.

0.0601 2020-08-26 11:02:47
    - Add missing signature documentation.

0.0600 2020-08-26 09:43:00
    - Add and test the set_time_sig() function.
    - Improve documentation.

0.0500 2020-08-13 15:34:46
    - Remove the unused new_track() function.

0.0403 2020-08-13 14:01:22
    - Add the midi_format() function.

0.0402 2019-12-06 06:49:51
    - Only set the patch if given a patch.
    - Improve documentation.

0.0401 2019-08-24 12:55:06
    - Improve documentation.

0.0400 2019-07-12 02:43:42
    - Add the ->dump function.

0.0300 2019-03-02 13:19:22
    - Add the new_track() function.
    - Improve tests.

0.0200 2019-03-02 10:47:28
    - Correct function name.

0.0100 2019-03-01 19:58:14
    - Ported from https://github.com/ology/Music/blob/master/MIDIUtil.pm
    - Minted by Dist::Zilla.